fix: adaugat butonul in harta interactiva

--- a/local.properties
+++ b/local.properties
@@ -1,1 +1,8 @@
-sdk.dir=C:/Users/octav/AppData/Local/Android/Sdk
+## This file must *NOT* be checked into Version Control Systems,
+# as it contains information specific to your local configuration.
+#
+# Location of the SDK. This is only used by Gradle.
+# For customization when using a Version Control System, please read the
+# header note.
+#Wed Jul 02 16:09:58 EEST 2025
+sdk.dir=/Users/robertojudele/Library/Android/sdk
