--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jul 02 16:09:58 EEST 2025
-sdk.dir=/Users/robertojudele/Library/Android/sdk
+#Thu Jul 03 23:43:22 EEST 2025
+sdk.dir=C\:\\Users\\miro2\\AppData\\Local\\Android\\Sdk
