--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 03 23:43:22 EEST 2025
-sdk.dir=C\:\\Users\\miro2\\AppData\\Local\\Android\\Sdk
+#Sat Jul 05 18:01:03 EEST 2025
+sdk.dir=C\:\\Users\\Larisa\\AppData\\Local\\Android\\Sdk
