fixed button issue

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Jul 05 18:01:03 EEST 2025
-sdk.dir=C\:\\Users\\Larisa\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\octav\\AppData\\Local\\Android\\Sdk
