--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jul 05 18:01:03 EEST 2025
-sdk.dir=C\:\\Users\\Larisa\\AppData\\Local\\Android\\Sdk
+#Mon Jul 07 11:15:16 EEST 2025
+sdk.dir=/Users/robertojudele/Library/Android/sdk
